force-app/main/default/objects/Parties_Involved__c/Parties_Involved__c.object-meta.xml
<CustomObject>
    <label>Parties Involved</label>
    <nameField>
        <label>Last Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Parties Involved</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>