force-app/main/default/objects/Parties_Involved__c/fields/EEO_Detail__c.field-meta.xml
<CustomField>
    <fullName>EEO_Detail__c</fullName>
    <label>EEO Detail</label>
    <referenceTo>EEO_Detail__c</referenceTo>
    <relationshipLabel>Parties Involved</relationshipLabel>
    <relationshipName>Parties_Involved</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>