force-app/main/default/objects/Parties_Involved__c/fields/Parties_Involved__c.field-meta.xml
<CustomField>
    <fullName>Parties_Involved__c</fullName>
    <displayFormat>PI-{000000}</displayFormat>
    <label>Parties Involved</label>
    <type>AutoNumber</type>
</CustomField>