force-app/main/default/objects/Parties_Involved__c/fields/Title_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Title_Relationship__c</fullName>
    <label>Title/Relationship</label>
    <length>80</length>
    <type>Text</type>
</CustomField>